
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_port; int sin_family; TYPE_1__ sin_addr; } ;
struct sockaddr {int dummy; } ;
typedef int sa ;


 int AF_INET ;
 int SOCK_STREAM ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int htons (short) ;
 int perror (char*) ;
 int resolv (char*,long*) ;
 int socket (int ,int ,int ) ;

int
connect_to (char *hostname, short port)
{
  struct sockaddr_in sa;
  int s;

  s = socket (AF_INET, SOCK_STREAM, 0);
  resolv (hostname, (long *) &sa.sin_addr.s_addr);
  sa.sin_family = AF_INET;
  sa.sin_port = htons (port);
  if (connect (s, (struct sockaddr *) &sa, sizeof (sa)) == -1)
    {
       perror("connect");
       exit(-1);
   }

  return s;
}
